--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a href="https://www.instagram.com/rockstar_aj_gaming_gta?igsh=b254eTdqZWxxa2hp" target="_blank">
         <img src="inst.png" title="instagram" alt="Instagram" />
       </a>
-      <a href="https://youtube.com/@rockstarajgaming?si=-qhC7tMlG3YmQUtT" target="_blank">
+      <a href="https://www.youtube.com/@ajgaming-op-bro" target="_blank">
         <img src="youtube.png" title="youtube" alt="YouTube" />
       </a>
       <a href="https://t.me/+-BvaOEfdM3BkN2U1" target="_blank">
