--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
     <div class="logo-area">
         <a href="https://youtube.com/@rockstarajgaming?si=-qhC7tMlG3YmQUtT" target="_blank">
-      <img src="hegaming.jpg.png" alt="Gaming Logo" class="logo" /></a>
+      <img src="anil.png" alt="Gaming Logo" class="logo" /></a>
       <h1>AJ Gaming</h1>
     </div>
     
