--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       </a>
     </section>
   </main>
-<marquee behavior="scroll" direction="left" scrollamount="5">Rockstar AJ Gaming</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="5"> AJ Gaming</marquee>
   <footer>
-    <p>© 2025 Rockstar AJ Gaming. All rights reserved.</p>
+    <p>© 2025  AJ Gaming. All rights reserved.</p>
   </footer>
 </body>
 </html>
