--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <b href="https://t.me/+-BvaOEfdM3BkN2U1" target="_blank">Telegram</b>
     </nav>
     <div class="logo-area">
-        <a href="https://youtube.com/@rockstarajgaming?si=-qhC7tMlG3YmQUtT" target="_blank">
+        <a href="https://www.youtube.com/@ajgaming-op-bro" target="_blank">
       <img src="anil2.png" alt="Gaming Logo" class="logo" /></a>
       <h1>AJ Gaming</h1>
     </div>
