--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <header>
     <nav>
-      <b href="https://www.instagram.com/rockstar_aj_gaming_gta?igsh=b254eTdqZWxxa2hp" target="_blank">Instagram</b>
-      <b href="https://youtube.com/@rockstarajgaming?si=-qhC7tMlG3YmQUtT" target="_blank">YouTube</b>
-      <b href="https://t.me/+-BvaOEfdM3BkN2U1" target="_blank">Telegram</b>
+      <a href="https://www.instagram.com/_aj_gaming_gta?igsh=b254eTdqZWxxa2hp"_blank">Instagram</a>
+      <a href="https://www.youtube.com/@ajgaming-op-bro" target="_blank">YouTube</a>
+      <a href="https://t.me/+-BvaOEfdM3BkN2U1" target="_blank">Telegram</a>
     </nav>
     <div class="logo-area">
         <a href="https://www.youtube.com/@ajgaming-op-bro" target="_blank">
@@ -28,7 +28,7 @@
     </section>
 
     <section class="social-links">
-      <a href="https://www.instagram.com/rockstar_aj_gaming_gta?igsh=b254eTdqZWxxa2hp" target="_blank">
+      <a href="https://www.instagram.com/_aj_gaming_gta?igsh=b254eTdqZWxxa2hp" target="_blank">
         <img src="inst.png" title="instagram" alt="Instagram" />
       </a>
       <a href="https://www.youtube.com/@ajgaming-op-bro" target="_blank">
