--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       <a href="https://t.me/+-BvaOEfdM3BkN2U1" target="_blank">
         <img src="tel.png" title="Telegram" alt="Telegram" />
       </a>
+       <a href="https://loco.com/r/anil_johnson/S84NWqabuF" target="_blank">
+        <img src="LOCO.png" title="LOCO" alt="LOCO" />
+       </a>
+      
     </section>
   </main>
 <marquee behavior="scroll" direction="left" scrollamount="5"> AJ Gaming</marquee>
